kubernetes/examples/ingress/ingress.yaml
# kubectl get ing
# NAME           CLASS   HOSTS                                ADDRESS        PORTS   AGE
# main-ingress   nginx   app.example.com,app-v3.example.com   192.168.49.2   80      7m9s

# add to /etc/resolv.conf: 
# 192.168.49.2 app.example.com

# curl app.example.com
# Hello world from hostname: kuber-9f8f8ff44-hjcgj
#
# curl app.example.com/v1
# V1.0 - Hello world from hostname: kuber-v1-844674b67c-26l7q

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: app.example.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port: 
                  number: 80
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: kuber-service-v1
                port: 
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: kuber-service-v2
                port: 
                  number: 80
   - host: app-v3.example.com
     http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service-v3
                port: 
                  number: 80
